Fix actions being too close to each other

--- a/assets/users/style.css
+++ b/assets/users/style.css
@@ -107,11 +107,16 @@
   padding: 8px;
   border-top: 1px solid rgba(0, 0, 0, .14);
   overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .admin-addon-user-manager--grid .user__actions > a {
-  float: right;
   text-transform: uppercase;
+}
+
+.admin-addon-user-manager--grid .user__actions > a + a {
+  padding-left: 8px;
 }
 
 #admin-main .admin-addon-user-manager--grid .user__actions > a.delete {
